utils/longhorn-nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-deployment
  namespace: longhorn-system
  labels:
    app: nfs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfs
  template:
    metadata:
      labels:
        app: nfs
    spec:
      volumes:
      - name: nfs-volume
        persistentVolumeClaim:
          claimName: nfs-volume
      restartPolicy: Always
      containers:
      - name: longhorn-test-nfs-container
        image: longhornio/nfs-ganesha:latest
        imagePullPolicy: Always
        command: ["bash", "-c", "chmod 700 /opt/backupstore && /opt/start_nfs.sh | tee /var/log/ganesha.log"]
        securityContext:
          privileged: true
          capabilities:
            add: ["SYS_ADMIN", "DAC_READ_SEARCH"]
        volumeMounts:
        - name: nfs-volume
          mountPath: "/opt/backupstore"
        livenessProbe:
          exec:
            command: ["bash", "-c", "grep \"No export entries found\" /var/log/ganesha.log > /dev/null 2>&1 ; [ $? -ne 0 ]"]
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 4
---
kind: Service
apiVersion: v1
metadata:
  name: longhorn-test-nfs-svc
  namespace: longhorn-system
spec:
  selector:
    app: longhorn-test-nfs
  clusterIP: None
  ports:
  - name: notnecessary
    port: 1234
    targetPort: 1234
