utils/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  rules:
    - host: longhorn.r0cc4rd0.rar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  longhorn-frontend
                port:
                  number: 80
